codyhouse update + base moved

--- a/src/assets/scss/custom-style/_typography.scss
+++ b/src/assets/scss/custom-style/_typography.scss
@@ -11,11 +11,11 @@
 
   // line-height
   --body-line-height: 1.6;
-  --heading-line-height: 1.25;
+  --heading-line-height: 1.2;
 
   // capital letters - used in combo with the lhCrop mixin
-  --font-primary-capital-letter: 1.2;
-  --font-secondary-capital-letter: 1.2;
+  --font-primary-capital-letter: 1;
+  --font-secondary-capital-letter: 1;
 
   // unit - don't modify unless you want to change the typography unit (e.g., from Rem to Em units)
   --text-unit: 1em; // if Em units → --text-unit: 1em;
@@ -47,8 +47,8 @@
 
 body {
   font-family: var(--font-secondary);
-  font-weight: 600;
   line-height: var(--body-line-height);
+  font-weight: 600;
 }
 
 h1,
@@ -58,7 +58,7 @@ h4 {
   --heading-font-weight: 700;
   font-family: var(--font-primary);
   font-weight: var(--heading-font-weight);
-  letter-spacing: -2%;
+  letter-spacing: -2px !important;
 }
 
 // font family
