--- a/src/assets/scss/custom-style/_buttons.scss
+++ b/src/assets/scss/custom-style/_buttons.scss
@@ -33,9 +33,8 @@
 
 // themes
 .btn--primary {
-  background: var(--color-primary-dark);
+  background: var(--color-primary);
   color: var(--color-white);
-  border: 1px solid var(--color-primary-dark);
   box-shadow: var(--shadow-sm);
 
   &:hover {
@@ -86,8 +85,8 @@
 }
 
 .btn--md {
-  padding: var(--space-xs) var(--space-md);
-  font-size: var(--text-md);
+  padding: 1rem var(--space-lg);
+  font-size: 21px;
 }
 
 .btn--lg {
