--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -4,12 +4,13 @@
   :root {
     --heading-line-height: 1.2;
     --body-line-height: 1.4;
+    --body-font-weight: 500;
   }
 
   body {
     font-size: var(--text-base-size, 1em);
     font-family: var(--font-primary, sans-serif);
-    color: var(--color-contrast-high, hsl(240, 4%, 20%));
+    color: var(--color-contrast-higher, hsl(123, 18%, 20%));
     font-weight: var(--body-font-weight, normal);
   }
 
