--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -26,3 +26,4 @@
 @import "components/2_slideshow";
 @import "components/3_thumbnail-slideshow";
 @import "components/4_product-v2";
+@import "components/1_card-v11";
