--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,9 +1,8 @@
-@import 'base';
+@import "base";
 /*! purgecss start ignore */
-@import 'custom-style';
-@import 'components';
+@import "custom-style";
+@import "components";
 /*! purgecss end ignore */
-
 
 // 👇 optional -> set custom breakpoints
 // $breakpoints: (
@@ -13,8 +12,6 @@
 //   lg: 80rem,
 //   xl: 90rem
 // );
-
-
 
 .ikonice {
 	width: 24px;
@@ -292,6 +289,9 @@
 	.hide-on-mobile-image:nth-of-type(1n + 2) {
 		display: none;
 	}
+	.order-last {
+		order: 999;
+	}
 }
 
 .line {
@@ -321,10 +321,38 @@
 	}
 }
 
+
+.white-text-one {
+	// font-size: 24px;
+	// line-height: 32px;
+	font-weight: 600;
+
+	strong {
+		font-weight: 600;
+		// font-size: 24px;
+		// line-height: 32px;
+		color: #f9fafb;
+	}
+}
 .text-normal {
 	font-style: normal;
-font-weight: 300;
-font-size: 32px;
-line-height: 41px;;
+	font-weight: 300;
+	font-size: 32px;
+	line-height: 41px;
+}
+
+.black-text {
+	font-style: normal;
+	font-weight: 600;
+	line-height: 38px;
+	span {
+		color: #101828;
+	}
+}
+@media (max-width: 1279px) {
+.translate {
+	--translate-x: -20%;
+	bottom: 20%;
+}
 
 }
