--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -27,3 +27,4 @@
 @import "components/3_thumbnail-slideshow";
 @import "components/4_product-v2";
 @import "components/1_card-v11";
+@import "components/1_card";
