--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -285,6 +285,13 @@
 	}
 }
 
+.black-text-one {
+	font-weight: 600;
+	strong {
+		color: black !important;
+	}
+}
+
 @media (max-width: 920px) {
 	.hide-on-mobile-image:nth-of-type(1n + 2) {
 		display: none;
@@ -355,4 +362,14 @@
 	bottom: 20%;
 }
 
+}
+
+.btn-contrast {
+	background: rgba(243, 244, 246, 0.12);
+
+
+}
+
+html {
+  scroll-behavior: smooth;
 }
