--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -28,3 +28,4 @@
 @import "components/4_product-v2";
 @import "components/1_card-v11";
 @import "components/1_card";
+@import "components/1_main-header";
