postanite saradnik progres

--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -29,3 +29,6 @@
 @import "components/1_card-v11";
 @import "components/1_card";
 @import "components/1_main-header";
+@import "components/1_hiding-nav";
+@import "components/1_how-it-works";
+@import "components/1_custom_select";
