postanite saradnik + istorija kompanije

--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -32,3 +32,5 @@
 @import "components/1_hiding-nav";
 @import "components/1_how-it-works";
 @import "components/1_custom_select";
+@import "components/1_how-it-works-v2";
+@import "components/1_revealing-section";
