--- a/src/assets/scss/components/_1_vertical-timeline.scss
+++ b/src/assets/scss/components/_1_vertical-timeline.scss
@@ -83,7 +83,7 @@ Usage: codyhouse.co/license
 
 .v-timeline__date-value { // date label
   color: var(--color-contrast-medium);
-  font-size: var(--text-sm);
+  font-size: var(--text-md);
   text-transform: uppercase;
   letter-spacing: 0.1em;
 }
