proizvodi text fix

--- a/src/assets/scss/components/_1_card-v11.scss
+++ b/src/assets/scss/components/_1_card-v11.scss
@@ -60,7 +60,7 @@ Usage: codyhouse.co/license
 	transform: translate(-50%, 0);
 	bottom: 5%;
 
-	background-color: alpha(var(color-contrast-lower), 0.95);
+	background-color: #274529ab;
 
 	color: var(--color-bg);
 	@include fontSmooth;
