faza 1 menjanje boja

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -281,14 +281,14 @@
 .accordion-v2__panel {
 	font-weight: 600;
 	strong {
-		color: black !important;
+		color: #2F3130 !important;
 	}
 }
 
 .black-text-one {
 	font-weight: 600;
 	strong {
-		color: black !important;
+		color: #2F3130 !important;
 	}
 }
 
@@ -316,14 +316,14 @@
 }
 
 .white-text {
-	font-size: 24px;
-	line-height: 32px;
+	font-size: 30px;
+	line-height: 36px;
 	font-weight: 600;
 
 	strong {
 		font-weight: 600;
-		font-size: 24px;
-		line-height: 32px;
+		font-size: 30px;
+		line-height: 36px;
 		color: #f9fafb;
 	}
 }
