--- a/src/assets/scss/custom-style/_buttons.scss
+++ b/src/assets/scss/custom-style/_buttons.scss
@@ -13,7 +13,6 @@
   line-height: 1.2;
   letter-spacing: 0.32px;
   @include fontSmooth;
-  box-shadow: var(--shadow-xs);
   transition: all 0.2s ease;
   will-change: transform;
 
@@ -34,8 +33,8 @@
 // themes
 .btn--primary {
   background: var(--color-primary);
-  color: var(--color-white);
-  box-shadow: var(--shadow-sm);
+  color: var(--color-secondary-darker);
+  font-weight: 500;
 
   &:hover {
     background: var(--color-primary-dark);
@@ -49,11 +48,10 @@
 
 .btn--subtle {
   background: var(--color-bg);
-  color: var(--color-primary-dark);
+  color: var(--color-secondary-darker);
   border: 1px solid var(--color-contrast-lower);
   font-family: var(--font-secondary);
   font-weight: 500;
-  box-shadow: var(--shadow-sm);
 
   &:hover {
     box-shadow: var(--shadow-xs);
@@ -61,7 +59,7 @@
 }
 
 .btn--accent {
-  background: var(--color-accent);
+  background: var(--color-accent-light);
   color: var(--color-white);
 
   &:hover {
